# umbrela

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  download_msmarco.sh  estimator.py  pyproject.toml  qrel_utils.py  requirements.txt  utils.py  vicuan_judge.py
.claude/skills/umbrela-eval/: SKILL.md
.claude/skills/umbrela-eval/references/: qrels.md
.claude/skills/umbrela-eval/scripts/: compare.py
.claude/skills/umbrela-install/: SKILL.md
.claude/skills/umbrela-install/references/: extras.md
.claude/skills/umbrela-quickstart/: SKILL.md
.claude/skills/umbrela-quickstart/references/: backends.md  cli-examples.md  input-output-examples.md  qrel-handling.md
.claude/skills/umbrela-verify/: SKILL.md
.claude/skills/umbrela-verify/scripts/: verify.sh
.github/workflows/: pr-format.yml
docs/: cli-for-agents.md
docs/release-notes/: release-notes-v0.0.7.md
examples/: e2e.py  judge_demo.py  sync_e2e.py  sync_judge_demo.py
scripts/: download_msmarco.sh  quality_gate.sh
src/: gpt_judge.py  qrel_utils.py
src/eval/: test.py
src/notebooks/: UMBRELA_Notebook.ipynb  UMBRELA_Notebook.md
src/prompts/: qrel_fewshot_bing.txt
src/umbrela/: ensemble_judge.py  evaluation.py  gemini_judge.py  gpt_judge.py  hgfllm_judge.py  llm_judge.py  osllm_judge.py  vicuna_judge.py
src/umbrela/api/: app.py  routes.py  runtime.py
src/umbrela/cli/: __init__.py  adapters.py  config.py  contract_data.py  errors.py  introspection.py  io.py  logging_utils.py  main.py  normalize.py  operations.py  prompt_view.py  responses.py  spec.py  view.py
src/umbrela/cli/commands/: common.py  evaluate.py  judge.py  meta.py  prompt.py  serve.py  validate.py  view.py
src/umbrela/prompts/: __init__.py  qrel_fewshot_basic.txt  qrel_fewshot_bing.txt  qrel_zeroshot_basic.txt  qrel_zeroshot_bing.txt  template_loader.py
src/umbrela/prompts/prompt_templates/: qrel_fewshot_basic.yaml  qrel_fewshot_bing.yaml  qrel_zeroshot_basic.yaml  qrel_zeroshot_bing.yaml
src/umbrela/utils/: common_utils.py  qrel_utils.py
tests/: test_backend_contracts.py  test_cli_evaluate.py  test_cli_main.py  test_cli_support.py  test_evaluation_utils.py  test_gpt_judge_async.py  test_live_openai_smoke.py  test_prompt_templates.py
tests/fixtures/evaluate/: sample.qrels  sample.run
